--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <h4>Browser</h4>
 
       <h5>Load the romaji-conv.js (jsDelivr)</h5>
-      <pre><code>&lt;script src="<a class="cdn-js"></a>"&gt;&lt;/script&gt;</code></pre>
+      <pre><code class="nohighlight">&lt;script src="<a class="cdn-js"></a>"&gt;&lt;/script&gt;</code></pre>
 
       <h5>1. Method pattern</h5>
       <div>
@@ -250,7 +250,7 @@ $(npm bin)/romaji-conv アノイヌチャウチャウトチャウンチャウ # 
             'https://cdn.jsdelivr.net/npm/@koozaki/romaji-conv@' +
             version +
             '/dist/romaji-conv.js';
-          $('.cdn-js').attr('href', jsPath).text(jsPath);
+         $('.cdn-js').attr('href', jsPath).text(jsPath);
         };
 
         updateCdnJs('latest');
@@ -289,8 +289,6 @@ $(npm bin)/romaji-conv アノイヌチャウチャウトチャウンチャウ # 
       });
     </script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/highlight.min.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
+    <script>hljs.highlightAll();</script>
   </body>
 </html>
