--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="canonical" href="https://koozaki.com/romaji-conv/" />
     <link
       rel="stylesheet"
-      href="https://koozaki.com/romaji-conv/assets/css/style.css"
+      href="https://romaji-conv.koozaki.com/assets/css/style.css"
     />
     <link
       rel="stylesheet"
